Fix page numbers overlap on 'Add New Admins' screen

--- a/admin/resources/css/spa-admin.css
+++ b/admin/resources/css/spa-admin.css
@@ -1871,7 +1871,7 @@ $Rev:2099 $
 #sfmaincontainer .sf-pagination a, #sfmaincontainer .tablenav .tablenav-pages a {
     position: relative;
     float: left;
-    width: 30px;
+    min-width: 30px;
     min-height: 30px;
     margin: 5px 0;
     font-size: 16px;
